--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: test
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v2.3.4
